--- a/Dockerfile_build
+++ b/Dockerfile_build
@@ -2,22 +2,17 @@ FROM docker:latest
 
 # Based on https://github.com/Ilhicas/alpine-pipenv
 ARG packages
-RUN apk --update add python3 python3-dev gcc \
+RUN apk --update add python3 python3-dev gcc make \
         musl-dev libffi-dev openssl-dev ${packages} \
     && rm -rf /var/cache/apk/* \
     && pip3 install -U pip pipenv
 
 
+# -v "$(pwd):/app" your workspace at runtime
 RUN set -ex && mkdir /app
 WORKDIR /app
-# Alternatively -v "$(pwd):/app"
-COPY Dockerfile* /app/
-COPY Pip* /app/
 ENV PIPENV_CACHE_DIR /app/.pipenv
 
-RUN echo "set -ex && pipenv install ; [ -n "\$@" ] && \$@" > /usr/local/bin/entrypoint.sh
+RUN echo "set -ex && pipenv install --system && sh /app/Dockerfile.sh && \$@" > /usr/local/bin/entrypoint.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 ENTRYPOINT entrypoint.sh
-
-# Needs var run docker socket mounted in at runtime, not build-friendly
-# CMD [ './Dockerfile.py' ]
