--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ version: 2
     enabled: true
   steps:
     - checkout
+    - attach_workspace:
+        at: ./ci-workspace/
     - run:
         command: ./circle-test.sh
 
@@ -28,6 +30,8 @@ jobs:
       enabled: true
     steps:
       - checkout
+      - attach_workspace:
+          at: ./ci-workspace/
       - run:
           command: ./circle-deploy.sh
 
@@ -50,6 +54,10 @@ workflows:
             tags:
               only: /^v.*/
       - armel:
+          filters:
+            tags:
+              only: /^v.*/
+      - deploy:
           filters:
             tags:
               only: /^v.*/
