--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ version: 2
     enabled: true
   steps:
     - checkout
-    - attach_workspace:
-        at: ./ci-workspace/
     - run:
         command: ./circle-test.sh
+    - persist_to_workspace:
+        root: .
+        paths: [ 'ci-workspace' ]
 
 
 jobs:
