--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
     machine:
       enabled: true
     steps:
+      - setup_remote_docker:
+          version: 18.06.0-ce
       - checkout
       - attach_workspace:
           at: .
