--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
   armel:
     <<: *job_template
   deploy:
+    docker:
+      - image: circleci/python:latest
     steps:
       - setup_remote_docker:
           version: 18.06.0-ce
